--- a/styles.css
+++ b/styles.css
@@ -47,9 +47,9 @@ body {
 }
 
 .memory-card {
-    width: calc(25% - 10px);
-    height: calc(50% - 10px);
-    margin: 5px;
+    width: calc(25% - 21px);
+    height: calc(50% - 16px);
+    margin: 10px;
     position: relative;
     transform: scale(1);
     transform-style: preserve-3d;
@@ -189,4 +189,44 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+/* Media Queries for Mobile Responsiveness */
+@media (max-width: 600px) {
+
+
+.memory-card {
+    width: calc(25% - 10px);
+    height: calc(50% - 10px);
+    margin: 5px;
+}
+
+    
+        .promo-code {
+        width: 100%; /* Make it responsive */
+
+    }
+    
+        .memory-game {
+        width: 100%; /* Make it responsive */
+        height: 200px;
+
+    }
+    
+    .memory-game-container p {
+        font-size: 20px; /* Smaller font size for mobile */
+    }
+    
+        .front-face {
+        padding:10px;
+    }
+
+
+    .close-button {
+        font-size: 16px; /* Smaller button font size */
+    }
+
+    .promo-code-value {
+        font-size: 30px; /* Smaller promo code font size */
+    }
 }
