--- a/scratch-off/styles.css
+++ b/scratch-off/styles.css
@@ -10,13 +10,13 @@ body {
 
 #container {
   position: relative;
-  width: 90%;  /* Use a percentage for responsive width */
-  max-width: 400px; /* Set a maximum width */
-  height: auto; /* Allow height to adjust automatically */
-  aspect-ratio: 9/16; /* Maintain a 1:1 aspect ratio */
-  border: 7px solid #801ED7; /* Add a solid border with color */
-  border-radius: 10px; /* Add rounded corners */
-  overflow: hidden; /* Ensure that child elements do not overflow the container */
+  width: 90%;
+  max-width: 400px;
+  height: auto;
+  aspect-ratio: 9/16;
+  border: 7px solid #801ED7;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 #scratchCanvas {
@@ -24,40 +24,40 @@ body {
   top: 0;
   left: 0;
   z-index: 3;
-  cursor: inherit; /* Inherit the custom cursor from the container */
-  width: 100%; /* Make the canvas fill the container */
-  height: 100%; /* Make the canvas fill the container */
+  cursor: inherit;
+  width: 100%;
+  height: 100%;
 }
 
 #backImage {
-  width: 100%;  /* Make the back image fill the container */
-  height: 100%;  /* Make the back image fill the container */
+  width: 100%;
+  height: 100%;
   display: block;
-  position: absolute; /* Position it absolutely */
-  top: 0; /* Align it to the top */
-  left: 0; /* Align it to the left */
-  z-index: 1; /* Set a lower z-index */
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
 }
 
 #frontImage {
-  width: 100%;  /* Make the front image fill the container */
-  height: 100%;  /* Make the front image fill the container */
+  width: 100%;
+  height: 100%;
   display: block;
-  position: absolute; /* Position it absolutely */
-  top: 0; /* Align it to the top */
-  left: 0; /* Align it to the left */
-  z-index: 2; /* Set a higher z-index to place it above the back image */
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
 }
 
 #closeButton {
   font-family: "Roboto", sans-serif;
-  margin-top: 20px; /* Space between the container and the button */
-  padding: 10px 20px; /* Padding for the button */
-  font-size: 16px; /* Font size */
-  background-color: #c95165; /* Button background color */
-  color: white; /* Button text color */
-  border: none; /* Remove border */
-  border-radius: 5px; /* Rounded corners */
-  cursor: pointer; /* Pointer cursor on hover */
+  margin-top: 20px;
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #c95165;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
   text-decoration: none;
 }
