--- a/scratch-off/styles.css
+++ b/scratch-off/styles.css
@@ -32,7 +32,7 @@ body {
 #backImage {
   width: 100%;
   height: 100%;
-  display: block;
+  display: none;
   position: absolute;
   top: 0;
   left: 0;
@@ -42,7 +42,7 @@ body {
 #frontImage {
   width: 100%;
   height: 100%;
-  display: block;
+  display: none;
   position: absolute;
   top: 0;
   left: 0;
@@ -50,10 +50,10 @@ body {
 }
 
 #closeButton {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', '-apple-system', 'Helvetica Neue', Arial, sans-serif;
   margin-top: 20px;
   padding: 10px 20px;
-  font-size: 16px;
+  font-size: 18px;
   background-color: #c95165;
   color: white;
   border: none;
