--- a/scratch-off/styles.css
+++ b/scratch-off/styles.css
@@ -1,3 +1,8 @@
+html {
+  overflow: hidden;
+  touch-action: none;
+}
+
 body {
   display: flex;
   flex-direction: column;
@@ -6,6 +11,8 @@ body {
   height: 100vh;
   margin: 0;
   background-color: #f0f0f0;
+  overflow: hidden;
+  touch-action: none;
 }
 
 #container {
@@ -29,7 +36,7 @@ body {
   height: 100%;
 }
 
-#backImage {
+#revealImage {
   width: 100%;
   height: 100%;
   display: none;
