--- a/swipe-survey/styles.css
+++ b/swipe-survey/styles.css
@@ -5,8 +5,20 @@ body {
 	align-items: center;
 	height: 100vh;
 	margin: 0;
-	background-color: #f4f4f9;
+	background-color: transparent !important;
 	overflow: hidden;
+	position: relative;
+}
+
+body::before {
+	content: "";
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.5);
+	z-index: -1;
 }
 
 .container {
@@ -17,6 +29,29 @@ body {
 	flex-direction: column;
 }
 
+/* Game Title */
+.game-title {
+	text-align: center;
+	font-size: 24px;
+	margin-bottom: 45px;
+	color: #333;
+
+	background: rgba(255, 255, 255);
+	padding: 20px 15px;
+	border-radius: 15px;
+	align-self: center;
+	width: 75%;
+}
+
+/* Card Stack */
+#card-stack {
+	position: relative;
+	width: 60%;
+	align-self: center;
+	aspect-ratio: 9/16;
+}
+
+/* Cards */
 .card {
 	position: absolute;
 	width: 100%;
@@ -33,6 +68,7 @@ body {
 	transition: transform 0.3s ease-out, opacity 0.3s ease-out;
 	gap: 25px;
 	border: 3px solid transparent;
+	z-index: 10;
 }
 
 .card img {
@@ -63,18 +99,16 @@ body {
 	border: 3px solid #9e9e9e;
 }
 
-#card-stack {
-	position: relative;
-	width: 60%;
-	height: auto;
-	align-self: center;
-	aspect-ratio: 9/16;
-}
-
 .button-container {
 	display: flex;
 	justify-content: space-around;
-	margin-top: 6em;
+	margin-top: 4em;
+
+	background: rgba(255, 255, 255); /* Light semi-transparent background */
+	padding: 20px 10px;
+	border-radius: 15px;
+	align-self: center;
+	width: 70%;
 }
 
 .button {
@@ -87,6 +121,10 @@ body {
 	transition: transform 0.2s;
 }
 
+.button:hover {
+	transform: scale(1.1);
+}
+
 #dislike-button {
 	background-color: #f44336;
 	color: white;
@@ -95,10 +133,6 @@ body {
 #like-button {
 	background-color: #4caf50;
 	color: white;
-}
-
-.button:hover {
-	transform: scale(1.1);
 }
 
 #skip-button {
@@ -112,13 +146,4 @@ body {
 
 #skip-button i {
 	margin-bottom: 5px;
-}
-
-.game-title {
-    text-align: center;
-    font-size: 24px;
-	padding-left: 25px;
-	padding-right: 25px;
-    margin-bottom: 45px;
-    color: #333;
 }
